syntax = "proto3";

package Win.App.Protobuf.Src;

message AppInfoProto {
    /// <summary>
    /// Id
    /// </summary>
    int32 Id = 1;

    /// <summary>
    /// 应用名
    /// </summary>
    string Name=2;

    /// <summary>
    /// 应用图片
    /// </summary>
    string Img=3;

    /// <summary>
    /// 应用描述
    /// </summary>
    string Describe=4;

    /// <summary>
    /// 应用下载URL
    /// </summary>
    string DownloadUrl=5;

    /// <summary>
    /// 应用下载次数
    /// </summary>
    int32 Downloads=6;

    /// <summary>
    /// 应用版本
    /// </summary>
    string Version=7;

    /// <summary>
    /// 应用更新时间
    /// </summary>
    string UpdateTime=8;

    /// <summary>
    /// 应用评分
    /// </summary>
    double Score=9;

    /// <summary>
    /// 应用类型
    /// </summary>
    string Type=10;
}